--- a/projects.html
+++ b/projects.html
@@ -22,12 +22,11 @@
     <section>
         <h2>Projects</h2>
         <ul>
-            <li>Project 1:
-                Making of Text-Based Python Game</li>
+            <a href="https://codehs.com/share/id/text-game-submission-0C8JLE/run">Text-Based Python Game</a>Text-Based Python Game</li>
                 <li>Project 2:
-                Simulation Project of Dice in Python</li>
+                <a href="https://codehs.com/share/id/sample-simulation-WeTgx8/run">Project of Dice in Python</a> </li>
                     <li>Project 3:
-                Game and Animation in CS Academy</li>
+                <a href="https://academy.cs.cmu.edu/sharing/yellowGreenBird6010">Animation in CS Academy</a> </li>
                 <li>Project 4:
                     Making of own Portfolio</li>
         </ul>
