--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
     <section>
         <h2>Projects</h2>
         <ul>
-            <a href="https://codehs.com/share/id/text-game-submission-0C8JLE/run">Text-Based Python Game</a>Text-Based Python Game</li>
+            <a href="https://codehs.com/share/id/text-game-submission-0C8JLE/run">Text-Based Python Game</a></li>
                 <li>Project 2:
                 <a href="https://codehs.com/share/id/sample-simulation-WeTgx8/run">Project of Dice in Python</a> </li>
                     <li>Project 3:
